--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">budgey_frontend</string>
+    <string name="app_name">Hawaii_Tourism</string>
 </resources>
